--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,7 +41,7 @@ background: #1F4677 url(images/blueprintpaper.png) repeat-x;
 header {
 position:relative;
 width: 940px;
-height: 200px;
+height: 252px;
 margin: 0 auto;
 background: #D2E1F6;
 }
@@ -136,8 +136,8 @@ text-decoration: underline;
 
 #plandesign {
 position: absolute;
-top: 0px;
-right: 2px;
+top: 10px;
+right: 18px;
 }
 
 header h1, header p {
@@ -250,4 +250,22 @@ line-height: 1.5em;
 
 footer p {
 margin-top: -15px;
+}
+
+/*GAME*/
+#game {
+	border: 1px dashed black;
+	margin-top: 20px;
+	width: 100%;
+}
+
+#game td {
+	border: 1px solid black;
+	height: 80px;
+}
+
+#game .peca {
+	background-color: green;
+	width: 100%;
+	height: 100%;
 }
