Uma versão simples com apenas 7 peças está totalmente funcional no client. Agora tem que refatorar o código que está feio e extende-lo.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -264,6 +264,10 @@ margin-top: -15px;
 	height: 80px;
 }
 
+#game td.highlight {
+	border-color: red;
+}
+
 #game .peca {
 	background-color: green;
 	width: 100%;
