--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,154 @@
-<h1><%=@message%></h1>
-<%=partial(:_par)%>
+<div id="wrapper"><!-- #wrapper -->
+
+	<nav>
+		<div class="menu">
+			<ul>
+				<li><a href="#">Home</a></li>
+			</ul>
+		</div>
+	</nav>
+	
+	<header>
+		<div id="plandesign"><img src="images/peg_solitaire.gif" alt="" /></div>
+		<h1><a href="#">Resta 1 - Algoritmo Genético</a></h1>
+		<p><strong>Resta um</strong> é um quebra-cabeça no qual o objetivo é, através de movimentos válidos, deixar apenas uma peça no tabuleiro.</p>
+		<p><strong>A proposta</strong> deste trabalho é apresentar uma solução usando a algoritmo genético para este quebra-cabeça.</p>
+	</header>
+	
+	<section id="main">
+		<section id="content">
+			
+			<table id="tabuleiro">
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td data-spot="01"><div class="peca" /></td>
+					<td data-spot="02"><div class="peca" /></td>
+					<td data-spot="03"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td data-spot="04"><div class="peca" /></td>
+					<td data-spot="05"><div class="peca" /></td>
+					<td data-spot="06"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+				<tr>
+					<td data-spot="07"><div class="peca" /></td>
+					<td data-spot="08"><div class="peca" /></td>
+					<td data-spot="09"><div class="peca" /></td>
+					<td data-spot="10"><div class="peca" /></td>
+					<td data-spot="11"><div class="peca" /></td>
+					<td data-spot="12"><div class="peca" /></td>
+					<td data-spot="13"><div class="peca" /></td>
+				</tr>
+				<tr>
+					<td data-spot="14"><div class="peca" /></td>
+					<td data-spot="15"><div class="peca" /></td>
+					<td data-spot="16"><div class="peca" /></td>
+					<td data-spot="17"></td>
+					<td data-spot="18"><div class="peca" /></td>
+					<td data-spot="19"><div class="peca" /></td>
+					<td data-spot="20"><div class="peca" /></td>
+				</tr>
+				<tr>
+					<td data-spot="21"><div class="peca" /></td>
+					<td data-spot="22"><div class="peca" /></td>
+					<td data-spot="23"><div class="peca" /></td>
+					<td data-spot="24"><div class="peca" /></td>
+					<td data-spot="25"><div class="peca" /></td>
+					<td data-spot="26"><div class="peca" /></td>
+					<td data-spot="27"><div class="peca" /></td>
+				</tr>
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td data-spot="28"><div class="peca" /></td>
+					<td data-spot="29"><div class="peca" /></td>
+					<td data-spot="30"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td data-spot="31"><div class="peca" /></td>
+					<td data-spot="32"><div class="peca" /></td>
+					<td data-spot="33"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+			</table>
+		
+		</section>
+
+		<aside id="sidebar">
+				<h3>Things To Do</h3>
+					<ul>
+						<li><a href="#">Play Games and Network</a></li>
+						<li><a href="#">Chat With Friends</a></li>
+						<li><a href="#">Swap Exciting Stories</a></li>
+						<li><a href="#">Sell Tons of Your Stuff</a></li>
+						<li><a href="#">Buy Stuff You Don't Need</a></li>
+						<li><a href="#">Trade Stuff With Others</a></li>
+					</ul>
+					
+				<h3>Sponsors</h3>
+					<img src="images/ad125.jpg" alt="" /> <img src="images/ad125.jpg" alt="" /><br /><img src="images/ad125.jpg" alt="" /> <img src="images/ad125.jpg" alt="" /><br /><br />
+
+				<h3>Connect With Us</h3>
+					<ul>
+						<li><a href="#">Twitter</a></li>
+						<li><a href="#">Facebook</a></li>
+					</ul>
+
+		</aside>
+
+	</section>
+	
+		<footer>
+		<section id="footer-area">
+
+			<section id="footer-outer-block">
+					<aside class="footer-segment">
+							<h4>Friends</h4>
+								<ul>
+									<li><a href="#">one linkylink</a></li>
+									<li><a href="#">two linkylinks</a></li>
+									<li><a href="#">three linkylinks</a></li>
+								</ul>
+					</aside>
+
+					<aside class="footer-segment">
+							<h4>Awesome Stuff</h4>
+								<ul>
+									<li><a href="#">one linkylink</a></li>
+									<li><a href="#">two linkylinks</a></li>
+									<li><a href="#">three linkylinks</a></li>
+								</ul>
+					</aside>
+
+					<aside class="footer-segment">
+							<h4>Coolness</h4>
+								<ul>
+									<li><a href="#">one linkylink</a></li>
+									<li><a href="#">two linkylinks</a></li>
+									<li><a href="#">three linkylinks</a></li>
+								</ul>
+					</aside>
+					
+					<aside class="footer-segment">
+							<h4>Blahdyblah</h4>
+								<p>Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+					</aside>
+
+			</section>
+
+		</section>
+	</footer>
+	
+</div>
