--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,16 @@
-<html>
-	<head>
-		<title>Resta 1</title>
-	</head>
-	<body>
-		<%=yield%>
-	</body>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+	<title>Resta 1 - Algoritmo Genético</title>
+	<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
+	<script type="text/javascript" src="js/lib/jquery/jquery-1.4.4.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery/jquery-ui-1.8.10.custom.min.js"></script>
+	<script type="text/javascript" src="js/src/Resta1.js"></script>
+	<script type="text/javascript" src="js/src/Application.js"></script>
+</head>
+<body>
+	<%=yield%>
+</body>
 </html>
+	
