--- a/views/index.erb
+++ b/views/index.erb
@@ -89,7 +89,7 @@
 		<aside id="sidebar">
 				<h3>Things To Do</h3>
 					<ul>
-						<li><a href="#">Play Games and Network</a></li>
+						<li><a href="#">Play Games and AA</a></li>
 						<li><a href="#">Chat With Friends</a></li>
 						<li><a href="#">Swap Exciting Stories</a></li>
 						<li><a href="#">Sell Tons of Your Stuff</a></li>
