--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -260,6 +260,8 @@ margin-top: -15px;
 }
 
 #tabuleiro td {
+	border-radius: 15px;
+	-moz-border-radius: 15px;
 	border: 1px solid black;
 	height: 80px;
 }
@@ -274,6 +276,9 @@ margin-top: -15px;
 
 #tabuleiro .peca {
 	background-color: green;
+	border-radius: 15px;
+	-moz-border-radius: 15px;
+	margin: 0	px;
 	width: 100%;
 	height: 100%;
 }
