--- a/views/index.erb
+++ b/views/index.erb
@@ -88,8 +88,8 @@
 
 		<aside id="sidebar">
 				
-				<h3>Sponsors</h3>
-					<img src="images/ad125.jpg" alt="" /> <img src="images/ad125.jpg" alt="" /><br /><img src="images/ad125.jpg" alt="" /> <img src="images/ad125.jpg" alt="" /><br /><br />
+				<h3>Pontuação</h3>
+					<div id="pontuacao">32</div><br /><br />
 
 				<h3>Connect With Us</h3>
 					<ul>
