Reinicar totalmente funcional e testado.

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,63 +22,63 @@
 				<tr>
 					<td class="shore"></td>
 					<td class="shore"></td>
-					<td data-spot="01"><div class="peca" /></td>
-					<td data-spot="02"><div class="peca" /></td>
-					<td data-spot="03"><div class="peca" /></td>
+					<td class="spot" data-spot="01"><div class="peca" /></td>
+					<td class="spot" data-spot="02"><div class="peca" /></td>
+					<td class="spot" data-spot="03"><div class="peca" /></td>
 					<td class="shore"></td>
 					<td class="shore"></td>
 				</tr>
 				<tr>
 					<td class="shore"></td>
 					<td class="shore"></td>
-					<td data-spot="04"><div class="peca" /></td>
-					<td data-spot="05"><div class="peca" /></td>
-					<td data-spot="06"><div class="peca" /></td>
+					<td class="spot" data-spot="04"><div class="peca" /></td>
+					<td class="spot" data-spot="05"><div class="peca" /></td>
+					<td class="spot" data-spot="06"><div class="peca" /></td>
 					<td class="shore"></td>
 					<td class="shore"></td>
 				</tr>
 				<tr>
-					<td data-spot="07"><div class="peca" /></td>
-					<td data-spot="08"><div class="peca" /></td>
-					<td data-spot="09"><div class="peca" /></td>
-					<td data-spot="10"><div class="peca" /></td>
-					<td data-spot="11"><div class="peca" /></td>
-					<td data-spot="12"><div class="peca" /></td>
-					<td data-spot="13"><div class="peca" /></td>
+					<td class="spot" data-spot="07"><div class="peca" /></td>
+					<td class="spot" data-spot="08"><div class="peca" /></td>
+					<td class="spot" data-spot="09"><div class="peca" /></td>
+					<td class="spot" data-spot="10"><div class="peca" /></td>
+					<td class="spot" data-spot="11"><div class="peca" /></td>
+					<td class="spot" data-spot="12"><div class="peca" /></td>
+					<td class="spot" data-spot="13"><div class="peca" /></td>
 				</tr>
 				<tr>
-					<td data-spot="14"><div class="peca" /></td>
-					<td data-spot="15"><div class="peca" /></td>
-					<td data-spot="16"><div class="peca" /></td>
-					<td data-spot="17"></td>
-					<td data-spot="18"><div class="peca" /></td>
-					<td data-spot="19"><div class="peca" /></td>
-					<td data-spot="20"><div class="peca" /></td>
+					<td class="spot" data-spot="14"><div class="peca" /></td>
+					<td class="spot" data-spot="15"><div class="peca" /></td>
+					<td class="spot" data-spot="16"><div class="peca" /></td>
+					<td class="spot" data-spot="17"></td>
+					<td class="spot" data-spot="18"><div class="peca" /></td>
+					<td class="spot" data-spot="19"><div class="peca" /></td>
+					<td class="spot" data-spot="20"><div class="peca" /></td>
 				</tr>
 				<tr>
-					<td data-spot="21"><div class="peca" /></td>
-					<td data-spot="22"><div class="peca" /></td>
-					<td data-spot="23"><div class="peca" /></td>
-					<td data-spot="24"><div class="peca" /></td>
-					<td data-spot="25"><div class="peca" /></td>
-					<td data-spot="26"><div class="peca" /></td>
-					<td data-spot="27"><div class="peca" /></td>
-				</tr>
-				<tr>
-					<td class="shore"></td>
-					<td class="shore"></td>
-					<td data-spot="28"><div class="peca" /></td>
-					<td data-spot="29"><div class="peca" /></td>
-					<td data-spot="30"><div class="peca" /></td>
-					<td class="shore"></td>
-					<td class="shore"></td>
+					<td class="spot" data-spot="21"><div class="peca" /></td>
+					<td class="spot" data-spot="22"><div class="peca" /></td>
+					<td class="spot" data-spot="23"><div class="peca" /></td>
+					<td class="spot" data-spot="24"><div class="peca" /></td>
+					<td class="spot" data-spot="25"><div class="peca" /></td>
+					<td class="spot" data-spot="26"><div class="peca" /></td>
+					<td class="spot" data-spot="27"><div class="peca" /></td>
 				</tr>
 				<tr>
 					<td class="shore"></td>
 					<td class="shore"></td>
-					<td data-spot="31"><div class="peca" /></td>
-					<td data-spot="32"><div class="peca" /></td>
-					<td data-spot="33"><div class="peca" /></td>
+					<td class="spot" data-spot="28"><div class="peca" /></td>
+					<td class="spot" data-spot="29"><div class="peca" /></td>
+					<td class="spot" data-spot="30"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td class="spot" data-spot="31"><div class="peca" /></td>
+					<td class="spot" data-spot="32"><div class="peca" /></td>
+					<td class="spot" data-spot="33"><div class="peca" /></td>
 					<td class="shore"></td>
 					<td class="shore"></td>
 				</tr>
@@ -91,10 +91,9 @@
 				<h3>Pontuação</h3>
 					<div id="pontuacao">32</div><br /><br />
 
-				<h3>Connect With Us</h3>
+				<h3>Ações</h3>
 					<ul>
-						<li><a href="#">Twitter</a></li>
-						<li><a href="#">Facebook</a></li>
+						<li><a id="reiniciar-btn" href="javascript:void(0);">Reiniciar</a></li>
 					</ul>
 
 		</aside>
