--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -284,11 +284,35 @@ margin-top: -15px;
 	height: 100%;
 }
 
-/*outros*/
+/*potuação*/
 #pontuacao {
 	color: #999;
 	letter-spacing: 10px;
 	font-family: monospace;
 	font-size: 69px;
 	font-weight: bolder;
+}
+
+/*movimentos*/
+#movimentos {
+	margin-top: 8px;
+}
+
+#movimentos ul, #movimentos li {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	list-style: none;
+	vertical-align: baseline;
+}
+
+#movimentos li {
+	border: 1px solid gray;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	float: left;
+	font-size: 10px;
+	margin-right: 5.8px;
+	margin-bottom: 2px;
+	padding: 0 2px;
 }
