--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -310,9 +310,14 @@ margin-top: -15px;
 	border: 1px solid gray;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
+	cursor: default;
 	float: left;
 	font-size: 10px;
 	margin-right: 5.8px;
 	margin-bottom: 2px;
 	padding: 0 2px;
+}
+
+#movimentos li.para-remover {
+	background-color:rgba(255,0,0,0.5)
 }
