Nova funcionalidade de executar sequencia de movimentos. Parcialmente implementada.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -253,6 +253,10 @@ footer p {
 margin-top: -15px;
 }
 
+aside textarea {
+	width: 250px;
+}
+
 /*tabuleiro*/
 #tabuleiro {
 	border: 1px dashed black;
