--- a/views/index.erb
+++ b/views/index.erb
@@ -97,6 +97,14 @@
 				<h3>Ações</h3>
 					<ul>
 						<li><a id="reiniciar-btn" href="javascript:void(0);">Reiniciar</a></li>
+						<li>
+							<a id="executar-sequencia-btn" href="javascript:void(0);">Executar Sequência</a>
+							<span id="executar-sequencia-tab">
+								: <a id="executar-sequencia-sim-btn" href="javascript:void(0);">sim</a>
+								| <a id="executar-sequencia-nao-btn" href="javascript:void(0);">não</a>
+								<textarea id="sequencia-text"></textarea>
+							</span>
+						</li>
 					</ul>
 
 		</aside>
