Refactoring dos movimentos

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/lib/jquery/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript" src="js/lib/jquery/jquery-ui-1.8.10.custom.min.js"></script>
 	<script type="text/javascript" src="js/lib/jquery/jquery.jgrowl_minimized.js"></script>
+	<script type="text/javascript" src="js/src/Utils.js"></script>
 	<script type="text/javascript" src="js/src/Resta1.js"></script>
 	<script type="text/javascript" src="js/src/Application.js"></script>
 </head>
