--- a/views/index.erb
+++ b/views/index.erb
@@ -18,71 +18,8 @@
 	<section id="main">
 		<section id="content">
 			
-			<table id="tabuleiro">
-				<tr>
-					<td class="shore"></td>
-					<td class="shore"></td>
-					<td class="spot" data-spot="01"><div class="peca" /></td>
-					<td class="spot" data-spot="02"><div class="peca" /></td>
-					<td class="spot" data-spot="03"><div class="peca" /></td>
-					<td class="shore"></td>
-					<td class="shore"></td>
-				</tr>
-				<tr>
-					<td class="shore"></td>
-					<td class="shore"></td>
-					<td class="spot" data-spot="04"><div class="peca" /></td>
-					<td class="spot" data-spot="05"><div class="peca" /></td>
-					<td class="spot" data-spot="06"><div class="peca" /></td>
-					<td class="shore"></td>
-					<td class="shore"></td>
-				</tr>
-				<tr>
-					<td class="spot" data-spot="07"><div class="peca" /></td>
-					<td class="spot" data-spot="08"><div class="peca" /></td>
-					<td class="spot" data-spot="09"><div class="peca" /></td>
-					<td class="spot" data-spot="10"><div class="peca" /></td>
-					<td class="spot" data-spot="11"><div class="peca" /></td>
-					<td class="spot" data-spot="12"><div class="peca" /></td>
-					<td class="spot" data-spot="13"><div class="peca" /></td>
-				</tr>
-				<tr>
-					<td class="spot" data-spot="14"><div class="peca" /></td>
-					<td class="spot" data-spot="15"><div class="peca" /></td>
-					<td class="spot" data-spot="16"><div class="peca" /></td>
-					<td class="spot" data-spot="17"></td>
-					<td class="spot" data-spot="18"><div class="peca" /></td>
-					<td class="spot" data-spot="19"><div class="peca" /></td>
-					<td class="spot" data-spot="20"><div class="peca" /></td>
-				</tr>
-				<tr>
-					<td class="spot" data-spot="21"><div class="peca" /></td>
-					<td class="spot" data-spot="22"><div class="peca" /></td>
-					<td class="spot" data-spot="23"><div class="peca" /></td>
-					<td class="spot" data-spot="24"><div class="peca" /></td>
-					<td class="spot" data-spot="25"><div class="peca" /></td>
-					<td class="spot" data-spot="26"><div class="peca" /></td>
-					<td class="spot" data-spot="27"><div class="peca" /></td>
-				</tr>
-				<tr>
-					<td class="shore"></td>
-					<td class="shore"></td>
-					<td class="spot" data-spot="28"><div class="peca" /></td>
-					<td class="spot" data-spot="29"><div class="peca" /></td>
-					<td class="spot" data-spot="30"><div class="peca" /></td>
-					<td class="shore"></td>
-					<td class="shore"></td>
-				</tr>
-				<tr>
-					<td class="shore"></td>
-					<td class="shore"></td>
-					<td class="spot" data-spot="31"><div class="peca" /></td>
-					<td class="spot" data-spot="32"><div class="peca" /></td>
-					<td class="spot" data-spot="33"><div class="peca" /></td>
-					<td class="shore"></td>
-					<td class="shore"></td>
-				</tr>
-			</table>
+			<div id="tabuleiro-placeholder">
+			</div>
 			
 			<section id="movimentos">
 			</section>
