Temificação e imagem gif do tabuleiro substituída por uma instancia de Tabuleiro.

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 	</nav>
 	
 	<header>
-		<div id="plandesign"><img src="images/peg_solitaire.gif" alt="" /></div>
+		<div id="tabuleiro-header"></div>
 		<h1><a href="#">Resta 1 - Algoritmo Genético</a></h1>
 		<p><strong>Resta um</strong> é um quebra-cabeça no qual o objetivo é, através de movimentos válidos, deixar apenas uma peça no tabuleiro.</p>
 		<p><strong>A proposta</strong> deste trabalho é apresentar uma solução usando a algoritmo genético para este quebra-cabeça.</p>
