--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,12 +135,6 @@ text-decoration: underline;
 
 /** HEADER */
 
-#plandesign {
-position: absolute;
-top: 10px;
-right: 18px;
-}
-
 header h1, header p {
 margin: 0;
 padding: 0 0 0 30px;
@@ -288,6 +282,34 @@ aside textarea {
 	width: 100%;
 	height: 100%;
 }
+
+#tabuleiro-header {
+	position: absolute;
+	top: 10px;
+	right: 18px;
+	height: 194px;
+	width: 220px;
+}
+
+#tabuleiro-header .tabuleiro {
+	height: 100%;
+	width: 100%;
+}
+
+#tabuleiro-header .tabuleiro td {
+	background-color: #DDD;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	border: 1px solid black;
+	height: auto;
+	text-align: center;
+}
+
+#tabuleiro-header .tabuleiro td.shore {
+	background-color: transparent;
+	border: none;
+}
+
 
 /*potuação*/
 #pontuacao {
