--- a/views/index.erb
+++ b/views/index.erb
@@ -18,6 +18,36 @@
 	<section id="main">
 		<section id="content">
 			
+			<section id="ag-individuos">
+				<h3>Geração <i>100</i> - Melhor Indivíduo: <i>10</i> - Pior Indivíduo: <i>31</i></h3>
+				<ul>
+					<li>
+						<div class="fitness">10</div>
+						<div class="individuo"></div>
+					</li>
+					<li>
+						<div class="fitness">20</div>
+						<div class="individuo"></div>
+					</li>
+					<li>
+						<div class="fitness">13</div>
+						<div class="individuo"></div>
+					</li>
+					<li>
+						<div class="fitness">15</div>
+						<div class="individuo"></div>
+					</li>
+					<li>
+						<div class="fitness">19</div>
+						<div class="individuo"></div>
+					</li>
+					<li>
+						<div class="fitness">9</div>
+						<div class="individuo"></div>
+					</li>
+				</ul>
+			</section>
+			
 			<div id="tabuleiro-placeholder">
 			</div>
 			
@@ -31,7 +61,7 @@
 				<h3>Pontuação</h3>
 					<div id="pontuacao">32</div><br /><br />
 
-				<h3>Ações</h3>
+				<h3>Ações do Tabuleiro</h3>
 					<ul>
 						<li>
 							<a id="reiniciar-btn" href="javascript:void(0);"
@@ -54,6 +84,20 @@
 								</span>
 						</li>
 					</ul>
+					
+					<hr />
+					
+					<h3>Algoritmo Genético</h3>
+						<ul>
+							<li>
+								<a id="iniciar-ag-btn" href="javascript:void(0);"
+									title="Iniciar/parar execução do algoritmo genético">Iniciar</a>
+							</li>
+							<li>
+								<a id="reset-ag-btn" href="javascript:void(0);"
+									title="Reset o algoritmo genético para começar uma nova execução">Reset</a>
+							</li>
+						</ul>
 
 		</aside>
 
