primeiros modelos do AG. Individuo, Helper e Amostra

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<div id="wrapper"><!-- #wrapper -->
+<div id="wrapper">
 
 	<nav>
 		<div class="menu">
@@ -19,33 +19,11 @@
 		<section id="content">
 			
 			<section id="ag-individuos">
-				<h3>Geração <i>100</i> - Melhor Indivíduo: <i>10</i> - Pior Indivíduo: <i>31</i></h3>
-				<ul>
-					<li>
-						<div class="fitness">10</div>
-						<div class="individuo"></div>
-					</li>
-					<li>
-						<div class="fitness">20</div>
-						<div class="individuo"></div>
-					</li>
-					<li>
-						<div class="fitness">13</div>
-						<div class="individuo"></div>
-					</li>
-					<li>
-						<div class="fitness">15</div>
-						<div class="individuo"></div>
-					</li>
-					<li>
-						<div class="fitness">19</div>
-						<div class="individuo"></div>
-					</li>
-					<li>
-						<div class="fitness">9</div>
-						<div class="individuo"></div>
-					</li>
-				</ul>
+				<h3>Geração <i id="geracao-num">100</i> - 
+					Melhor Indivíduo: <i id="melhor-individuo-fitness">10</i> - 
+					Pior Indivíduo: <i id="pior-individuo-fitness">31</i>
+				</h3>
+				<ul></ul>
 			</section>
 			
 			<div id="tabuleiro-placeholder">
