--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="js/lib/jquery/jquery.jgrowl_minimized.js"></script>
 	<script type="text/javascript" src="js/src/Utils.js"></script>
 	<script type="text/javascript" src="js/src/Resta1.js"></script>
+	<script type="text/javascript" src="js/src/AG.js"></script>
 	<script type="text/javascript" src="js/src/Application.js"></script>
 </head>
 <body>
