--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,413 +1,35 @@
-/* Created by http://freehtml5templates.com */
-
-/* reset */
-* {
-margin: 0;
-padding: 0;
+svg {
+    float: left;
+    border: solid 1px #aaa;
 }
 
-/* render html5 elements as block */
-header, footer, section, aside, nav, article {
-display: block;
+svg text {
+	fill: #ccc;
+	font-size: 0.8em;
+	cursor:default;
 }
 
-body {
-line-height: 1;
-background: #1F4677;
-font-family: Verdana, Arial, Helvetica, sans-serif;
-color: #666;
-font-size: 14px;
-line-height: 18px;
-}
-	
-/* layout */
-
-#wrapper {
-width: 940px;
-margin: 0 auto;
-margin-top: 5px;
-margin-bottom: 5px;
--webkit-box-shadow: 3px 3px 7px #777;
--moz-box-shadow: 3px 3px 7px #777;
+svg text.score {
+	fill: #999;
+	font-size: 1em;
 }
 
-nav {
-width: 940px;
-height: 69px;
-margin: 0 auto;
-background: #1F4677 url(/images/blueprintpaper.png) repeat-x;
+circle {
+	stroke : grey;
+	stroke-width : 3px;
+	fill: brown;
 }
 
-header {
-position:relative;
-width: 940px;
-height: 252px;
-margin: 0 auto;
-background: #D2E1F6;
+circle.selected {
+	fill: #900000;
+	stroke : red;
 }
 
-#main {
-width: 940px;
-margin: 0 auto;
-padding: 10px 0 10px 0;
-background: #fff;
-overflow: hidden;
+circle.empty {
+	fill: white;
 }
 
-#content {
-float: right;
-width: 590px;
-margin-right: 30px;
-}
-
-#sidebar {
-float: left;
-padding-left: 20px;
-width: 270px;
-height: 640px;
-background: #fff;
-border-right: 4px #1F4677 solid;
-}
-
-footer {
-width: 940px;
-margin: 0 auto;
-clear: both;
-}
-
-/* basics */
-
-h1,h2,h3,h4,h5,h6 {
-font-weight: bold;
-clear: both;
-color: #333;
-}
-
-a:link, a:visited {
-color:#1F4677;
-text-decoration: none;
-}
-
-a:hover, a:active {
-color: #333;
-text-decoration: underline;
-}
-
-p {
-margin-bottom: 18px;
-}
-
-li {
-padding-left: 5px;
-}
-
-/* nav */
-
-nav .menu {
-font-size: 22px;
-font-weight: bold;
-}
-
-nav .menu ul {
-margin: 0;
-padding: 25px 0 0 20px;
-list-style: none;
-line-height: normal;
-}
-
-nav .menu li {
-display: block;
-float: left;
-}
-
-nav .menu a {
-display: block;
-float: left;
-margin-right: 5px;
-padding: 0px 15px;
-text-decoration: none;
-color: #1F4677;
-}
-
-nav .menu a:hover {
-text-decoration: underline;
-}
-
-/** HEADER */
-
-header h1, header p {
-margin: 0;
-padding: 0 0 0 30px;
-line-height: normal;
-}
-
-header h1 { 	
-float: left;
-padding-top: 20px; 
-}
-
-header h1 a:link, header h1 a:visited {
-text-decoration: none;
-color: #333;
-}
-
-header h1 a:hover { 
-text-decoration: underline; 
-}
-
-header p {
-padding: 80px 0 0 30px;
-width: 500px;
-font-style: italic;
-font-size: 14px;
-color: #333;
-}
-
-/** ARTICLES **/
-article img {
-border: none;
--webkit-box-shadow: 3px 3px 7px #777;
--moz-box-shadow: 3px 3px 7px #777;
-}
-
-#content p, ul, ol, hr {
-margin-bottom: 24px;
-margin-right: 18px;
-}
-
-#content ul ul, ol ol, ul ol, ol ul {
-margin-bottom: 0;
-}
-
-#content h1, h2, h3, h4, h5, h6 {
-color: #333;
-margin: 0 0 20px 0;
-line-height: 1.5em;
-}
-
-.alignleft, img.alignleft {
-display: inline;
-float: left;
-margin-right: 24px;
-margin-top: 4px;
-}
-
-.alignright, img.alignright {
-display: inline;
-float: right;
-margin-left: 24px;
-margin-top: 4px;
-}
-
-.aligncenter, img.aligncenter {
-clear: both;
-display: block;
-margin-left: auto;
-margin-right: auto;
-}
-
-img.alignleft, img.alignright, img.aligncenter {
-margin-bottom: 12px;
-}
-
-/* sidebar and footer widget blocks */
-
-aside h3 {
-font-size: 18px;
-}
-
-aside ul {
-list-style: inside;
-color: #333;
-margin-bottom: 20px;
-margin-top: -15px;
-}
-
-#footer-area {
-background: #D2E1F6;
-color: #333;
-font-size: 90%;
-padding: 18px 0;
-overflow: hidden;
-}
-
-.footer-segment {
-float: left;
-margin-right: 20px;
-margin-left: 20px;
-width: 190px;
-}
-
-footer aside h4 {
-color: #333;
-font-size: 16px;
-line-height: 1.5em;
-}
-
-footer p {
-margin-top: -15px;
-}
-
-aside textarea {
-	width: 250px;
-}
-
-/*tabuleiro*/
-.tabuleiro {
-	border: 1px dashed black;
-	margin-top: 20px;
-	width: 100%;
-}
-
-.tabuleiro td {
-	border-radius: 15px;
-	-moz-border-radius: 15px;
-	border: 1px solid black;
-	height: 80px;
-}
-
-.tabuleiro td.highlight {
-	border-color: red;
-}
-
-.tabuleiro td.shore {
-	border: none;
-}
-
-.tabuleiro .peca {
-	background-color: green;
-	border-radius: 15px;
-	cursor: move;
-	-moz-border-radius: 15px;
-	margin: 0	px;
-	width: 100%;
-	height: 100%;
-}
-
-#tabuleiro-header {
-	position: absolute;
-	top: 10px;
-	right: 18px;
-	height: 194px;
-	width: 220px;
-}
-
-#tabuleiro-header .tabuleiro {
-	height: 100%;
-	width: 100%;
-}
-
-#tabuleiro-header .tabuleiro td {
-	background-color: #DDD;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	border: 1px solid black;
-	height: auto;
-	text-align: center;
-}
-
-#tabuleiro-header .tabuleiro td.shore {
-	background-color: transparent;
-	border: none;
-}
-
-
-/*potuação*/
-#pontuacao {
-	color: #999;
-	letter-spacing: 10px;
-	font-family: monospace;
-	font-size: 69px;
-	font-weight: bolder;
-}
-
-/*movimentos*/
-#movimentos {
-	margin-top: 8px;
-}
-
-#movimentos ul, #movimentos li {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	list-style: none;
-	vertical-align: baseline;
-}
-
-#movimentos li {
-	border: 1px solid gray;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	cursor: default;
-	float: left;
-	font-size: 10px;
-	margin-right: 5.8px;
-	margin-bottom: 2px;
-	padding: 0 2px;
-}
-
-#movimentos li.para-remover {
-	background-color:rgba(255,0,0,0.5)
-}
-
-/*individuos*/
-
-#ag-individuos {
-	height: 172px;
-	width: 100%;
-}
-
-#ag-individuos h3 {
-	color: #999;
-	text-align: center;
-}
-
-#ag-individuos h3 i {
-	color: #666;
-}
-
-#ag-individuos ul, #ag-individuos li {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	list-style: none;
-	vertical-align: baseline;
-}
-
-#ag-individuos li {
-	border: 1px solid gray;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	cursor: default;
-	float: left;
-	margin-right: 12px;
-	margin-bottom: 2px;
-	padding: 0 2px;
-}
-
-#ag-individuos li .fitness {
-		font-size: 36px;
-		text-align: center;
-		padding-top: 10px;
-}
-
-#ag-individuos li .individuo {
-	height: 100%;
-	width: 80px;
-}
-
-#ag-individuos li .individuo td {
-	background-color: #DDD;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	height: 6px;
-}
-
-#ag-individuos li .individuo .peca {
-	cursor: default;
-}
-
-#ag-individuos li .individuo td.shore {
-	background-color: transparent;
-	border: none;
+circle.destination {
+	fill: #E0FFE4;
+	stroke : green;
 }
